--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.1.0",
+    "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
