--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+  
+    "@vis.gl/react-google-maps": "^1.4.2",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^18.3.0",
