--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  
     "@vis.gl/react-google-maps": "^1.4.2",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
@@ -15,7 +14,8 @@
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.1.0",
     "react-transition-group": "^4.4.5",
-    "react-widgets": "^5.8.4",
+    "react-widgets": "^5.8.6",
+    "sass": "^1.83.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4",
     "webpack": "^5.97.1",
