--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.1.0",
+    "react-tilt": "^1.0.2",
     "react-transition-group": "^4.4.5",
     "react-widgets": "^5.8.6",
     "sass": "^1.83.1",
